# project-memory-palace

./: .gitignore  README.md  SPEC-v1.0-tool-convergence.md  SPEC-v1.1-design-closure.md  SPEC-v1.1-workspace-autonomy.md  batch1-fix-spec.md  batch2-fix-spec.md  batch3-fix-spec.md  batch4-fix-spec.md  install.bat  phase1-prompt.txt  pyproject.toml  test-plan.md
docs/superpowers/plans/: 2026-06-09-project-memory-palace.md  2026-06-10-project-memory-palace-go-implementation.md
docs/superpowers/specs/: 2026-06-09-project-memory-palace-design.md  2026-06-10-project-memory-palace-go-design.md
project-memory-palace/: .fix-prompt.txt  .gitignore  Makefile  go.mod  go.sum
project-memory-palace/.hermes/plans/: pmem-first-principles-fix-2026-07-08.md  pmem-workspace-mode-2026-07-08.md
project-memory-palace/.project-memory/: config.yaml
project-memory-palace/.project-memory/rules/: agent-rules.yaml
project-memory-palace/cmd/pmem/: hideconsole_other.go  hideconsole_windows.go  main.go
project-memory-palace/cmd/pmem-gui/: main.go
project-memory-palace/cmd/pmem-mcp/: main.go
project-memory-palace/cmd/pmem-tray/: main.go
project-memory-palace/internal/audit/: audit.go  audit_test.go
project-memory-palace/internal/i18n/: i18n.go  (+1 more)
project-memory-palace/web/: index.html
src/pmem/: __init__.py  audit.py  cli.py  constants.py  defaults.py  gui.py  i18n.py  index.py  mcp_server.py  models.py  paths.py  service.py  yaml_io.py
tests/: conftest.py  test_audit.py  test_cli.py  test_index.py  test_mcp_server.py  test_models.py  test_service.py  test_yaml_io.py
(+30 files in other folders)
